fixing issue where site name in sticky header would wrap even if it didn't need to #3239

--- a/modules/custom/cu_sticky_menu/scss/cu-sticky-menu.scss
+++ b/modules/custom/cu_sticky_menu/scss/cu-sticky-menu.scss
@@ -32,7 +32,9 @@ $cugold: #cfb87c;
   justify-content: space-between;
 }
 .sticky-menu-site-name {
-  max-width:300px;
+  flex-shrink: 1;
+  padding-right:40px;
+  min-width:300px;
   font-family: "Neue Helvetica W05", "Roboto Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
   a:link,
   a:visited {
